[package]
name = "ruuvi-jsonl-socket-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
btleplug = "0.9.0"
futures = "0.3.19"
uuid = "0.8.2"
ruuvi-sensor-protocol = "0.5.0"
structopt = { version = "0.3.25", default-features = false }