[package]
name = "ruuvitag-jsonl-socket-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.23.0", features = ["full"] }
btleplug = "0.10.4"
futures = "0.3.25"
ruuvi-sensor-protocol = "0.6.1"
structopt = { version = "0.3.26", default-features = false }
serde_json = "1.0.79"
